--- a/public/index.html
+++ b/public/index.html
@@ -35,5 +35,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+      const body = document.querySelector('body');
+      body.className = localStorage.getItem('theme') || 'light';
+    </script>
   </body>
 </html>
